--- a/src/telas/TelaAdicionarLivro.form
+++ b/src/telas/TelaAdicionarLivro.form
@@ -176,6 +176,7 @@
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
           <ComponentRef name="id_grupoTem"/>
         </Property>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="Tem na estante"/>
       </Properties>
     </Component>
